# abstract-graphql

./: Cargo.toml  README.md
ag_cli/: Cargo.toml
ag_cli/src/: main.rs
ag_codegen/: Cargo.toml
ag_codegen/src/: lib.rs  typescript.rs
ag_parsing/: Cargo.toml
ag_parsing/src/: lib.rs  scalars.rs  types.rs
tests/: types.graphql
