[package]
name = "ag_cli"
version = "0.1.0"
authors = ["Aurelien Foucault <aurelien.foucault@epitech.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "abstract-graphql"
path = "src/main.rs"

[dependencies]
ag_parsing = { path = "../ag_parsing" }
